# source-free-cross-cluster-landslide

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: region_to_cluster.json
docs/: DATA.md  PROTOCOL_PROVENANCE.md  REPRODUCIBILITY.md
results/: paper_summary.json
scripts/: convert_to_memmap.py  preprocess_sen12.py  run_adaptation.py  run_threshold_probe.py  train_source.py
src/landslide_sfda/: __init__.py  constants.py  data.py  engine.py  metrics.py  model.py
tests/: test_data.py  test_metrics.py  test_model.py  test_preprocess.py
