[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "landslide-sfda"
version = "0.1.0"
description = "Paper-aligned source-free few-shot cross-cluster landslide segmentation"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Zhuangzhi Wang"},
  {name = "Cun Weng"},
  {name = "Xinfang Chen"},
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "torch>=2.1",
]

[project.optional-dependencies]
test = ["pytest>=7.4"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
